--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/themes": "^2.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "glpk.js": "^4.0.1",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "react": "^18",
