--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@radix-ui/themes": "^2.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
     "glpk.js": "^4.0.1",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
+    "openai": "^4.20.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
